--- a/ohrms_loan/views/hr_loan.xml
+++ b/ohrms_loan/views/hr_loan.xml
@@ -24,18 +24,28 @@
         <field name="arch" type="xml">
             <form string="Loan Request">
                 <header>
-                    
-                    <button name="action_submit" type="object" string="Submit" states="draft" class="oe_highlight"/>
-                    <button name="action_cancel" type="object" string="Cancel" states="draft" />
-                    <button name="action_approve" type="object" string="Approve" states="waiting_approval_1" class="oe_highlight" groups="hr.group_hr_manager,hr.group_hr_user"/>
-                    <button name="action_refuse" type="object" string="Refuse" states="draft,waiting_approval_1" class="oe_highlight" groups="hr.group_hr_manager,hr.group_hr_user"/>
-                    <field name="state" widget="statusbar" statusbar_visible="draft,waiting_approval_1,approve" />
+
+                    <button name="action_submit" type="object" string="Submit" states="draft" class="oe_highlight"
+                            groups="ohrms_loan.group_loan_submit"/>
+                    <button name="action_approve_1" type="object" string="First Approve" states="waiting_approval_1"
+                            class="oe_highlight" groups="ohrms_loan.group_loan_approbation_1"/>
+                    <button name="action_approve" type="object" string="Second Approve" states="approve1"
+                            class="oe_highlight" groups="ohrms_loan.group_loan_approbation_2"/>
+                    <button name="action_refuse" type="object" string="Refuse"
+                            states="draft,waiting_approval_1,approve1" class="oe_highlight"
+                            groups="hr.group_hr_manager"/>
+                    <button name="action_cancel" type="object" string="Cancel" states="draft"/>
+                    <field name="state" widget="statusbar"
+                           statusbar_visible="draft,waiting_approval_1,approve1,approve"/>
                 </header>
 
                 <sheet>
                     <div class="oe_button_box" name="button_box">
-                        <button class="oe_stat_button" name="open_entries"  type="object" icon="fa-pencil">
-                            <field string="Journal Entries" name="loan_journal_count" widget="statinfo" />
+                        <button class="oe_stat_button" name="action_view_loans" type="object" icon="fa-list">
+                            <field string="" name="global_remaining_amount" widget="statinfo"/>
+                        </button>
+                        <button class="oe_stat_button" name="open_entries" type="object" icon="fa-pencil">
+                            <field string="Journal Entries" name="loan_journal_count" widget="statinfo"/>
                         </button>
                     </div>
                     <div class="oe_title">
@@ -44,38 +54,50 @@
                         </h1>
                     </div>
                     <group col="4">
-                        <field name="employee_id"  attrs="{'readonly':[('state','in',('approve', 'reschedule'))]}"/>
-                        <field name="date"/>
+                        <field name="employee_id" attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="date" attrs="{'readonly':[('state','!=','draft')]}"/>
                         <field name="department_id"/>
                         <field name="job_position"/>
-                        <field name="loan_amount" attrs="{'readonly':[('state','in',('approve', 'reschedule'))]}"/>
-                        <field name="installment" attrs="{'readonly':[('state','in',('approve', 'reschedule'))]}"/>
-                        <field name="payment_date" attrs="{'readonly':[('state','in',('approve', 'reschedule'))]}"/>
+                        <field name="loan_amount"
+                               attrs="{'readonly':[('state','not in',('draft','waiting_approval_1'))]}"/>
+                        <field name="installment"
+                               attrs="{'readonly':[('state','not in',('draft','waiting_approval_1'))]}"/>
+                        <field name="payment_date"
+                               attrs="{'readonly':[('state','not in',('draft','waiting_approval_1'))]}"/>
                         <field name="company_id" options="{'no_create': True}" groups="base.group_multi_company"/>
-                        <field name="currency_id" options="{'no_create': True}" groups="base.group_multi_company" attrs="{'readonly':[('state','in',('approve', 'reschedule'))]}"/>
-                        <field name="multi_loan" attrs="{'readonly':[('state','in',('approve', 'reschedule'))]}"/>
+                        <field name="currency_id" options="{'no_create': True}" groups="base.group_multi_company"
+                               attrs="{'readonly':[('state','!=','draft')]}"/>
+                        <field name="multi_loan" string="Allow Multi Loan"
+                               attrs="{'readonly':[('state','not in',('draft','waiting_approval_1'))]}"/>
+                        <field name="user_id" invisible="1"/>
                     </group>
                     <notebook>
-                        <page string="Installments" attrs="{'readonly':[('state','not in',('draft', 'reschedule'))]}">
+                        <page string="Installments"
+                              attrs="{'readonly':[('state','not in',('draft', 'waiting_approval_1'))]}">
                             <field name="loan_lines">
                                 <tree string="Installments" editable="bottom">
                                     <field name="date" attrs="{'readonly':[('paid','=',True)]}"/>
                                     <field name="amount" attrs="{'readonly':[('paid','=',True)]}"/>
                                     <field name="paid" readonly="1"/>
-                                    
+
                                 </tree>
                                 <form string="Installments">
                                     <field name="date" attrs="{'readonly':[('paid','=',True)]}"/>
                                     <field name="amount" attrs="{'readonly':[('paid','=',True)]}"/>
                                     <field name="paid" readonly="1"/>
-                                    
+
                                 </form>
                             </field>
-                            <button name="compute_installment" type="object" string="Loan Installment" class="oe_highlight"  attrs="{'invisible':[('state','in',('approve', 'refuse'))]}"/>
-                            <group class="oe_subtotal_footer oe_right" colspan="2" >
+                            <button name="compute_installment" type="object" string="Loan Installment"
+                                    class="oe_highlight" attrs="{'invisible':[('state','in',('approve', 'refuse'))]}"/>
+                            <group class="oe_subtotal_footer oe_right" colspan="2">
                                 <field name="total_amount" options="{'currency_field': 'currency_id'}"/>
-                                <field name="total_paid_amount"  options="{'currency_field': 'currency_id'}"/>
-                                <field name="balance_amount" class="oe_subtotal_footer_separator"  options="{'currency_field': 'currency_id'}"/>
+                                <field name="total_paid_amount" options="{'currency_field': 'currency_id'}"/>
+                                <field name="balance_amount" class="oe_subtotal_footer_separator"
+                                       options="{'currency_field': 'currency_id'}"/>
+                                <separator/>
+                                <field invisible="1" name="global_balance_amount" class="oe_subtotal_footer_separator"
+                                       options="{'currency_field': 'currency_id'}"/>
                             </group>
                             <div class="oe_clear"/>
                         </page>
@@ -94,13 +116,13 @@
         <field name="name">hr.loan.search.form</field>
         <field name="model">hr.loan</field>
         <field name="arch" type="xml">
-           <search string="Loan">
-               <filter string="My Requests" name="myrequest" domain="[('employee_id.user_id.id', '=', uid)]" />
+            <search string="Loan">
+                <filter string="My Requests" name="myrequest" domain="[('employee_id.user_id.id', '=', uid)]"/>
                 <field name="employee_id" string="Employee"/>
                 <field name="department_id" string="Department"/>
-                    <filter string="Employee" name="employee_id" context="{'group_by':'employee_id'}"/>
-                    <filter string="Department" name="department_id" context="{'group_by':'department_id'}"/>
-                    <filter string="Status" name="status" context="{'group_by':'state'}"/>
+                <filter string="Employee" name="employee_id" context="{'group_by':'employee_id'}"/>
+                <filter string="Department" name="department_id" context="{'group_by':'department_id'}"/>
+                <filter string="Status" name="status" context="{'group_by':'state'}"/>
             </search>
         </field>
     </record>
@@ -108,8 +130,8 @@
 
     <!--loan menu-->
     <menuitem name="Loans"
-        id="menu_hr_loans_and_advances" parent="hr.menu_hr_root"
-        sequence="20"/>
+              id="menu_hr_loans_and_advances" parent="hr.menu_hr_root"
+              sequence="20"/>
 
     <record id="action_hr_loan_request" model="ir.actions.act_window">
         <field name="name">Request for Loan</field>
@@ -117,19 +139,109 @@
         <field name="view_mode">tree,form</field>
         <field name="context">{'search_default_myrequest': 1}</field>
         <field name="search_view_id" ref="view_loan_request_search_form"/>
-         <field name="help" type="html">
+        <field name="help" type="html">
             <p class="oe_view_nocontent_create">
                 Click to create a new Loan request.
-            </p><p>
+            </p>
+            <p>
+                Use this menu to create loan requests.
+            </p>
+        </field>
+    </record>
+    <record id="action_hr_loan_my_request" model="ir.actions.act_window">
+        <field name="name">My Loan request</field>
+        <field name="res_model">hr.loan</field>
+        <field name="view_mode">tree,form</field>
+        <!--        <field name="context">{'search_default_myrequest': 1}</field>-->
+        <field name="domain">[('employee_id.user_id.id', '=', uid)]</field>
+        <field name="search_view_id" ref="view_loan_request_search_form"/>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                Click to create a new Loan request.
+            </p>
+            <p>
+                Use this menu to create loan requests.
+            </p>
+        </field>
+    </record>
+    <record id="action_hr_loan_to_approve_request" model="ir.actions.act_window">
+        <field name="name">To approve Loan request</field>
+        <field name="res_model">hr.loan</field>
+        <field name="view_mode">tree,form</field>
+        <field name="domain">[('state', 'in', ('waiting_approval_1','approve1'))]</field>
+        <field name="search_view_id" ref="view_loan_request_search_form"/>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                Click to create a new Loan request.
+            </p>
+            <p>
+                Use this menu to create loan requests.
+            </p>
+        </field>
+    </record>
+    <record id="action_hr_loan_approved_request" model="ir.actions.act_window">
+        <field name="name">Approved Loan request</field>
+        <field name="res_model">hr.loan</field>
+        <field name="view_mode">tree,form</field>
+        <field name="domain">[('state', '=', 'approve')]</field>
+        <field name="search_view_id" ref="view_loan_request_search_form"/>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                Click to create a new Loan request.
+            </p>
+            <p>
+                Use this menu to create loan requests.
+            </p>
+        </field>
+    </record>
+    <record id="action_hr_loan_all_request" model="ir.actions.act_window">
+        <field name="name">All Loan request</field>
+        <field name="res_model">hr.loan</field>
+        <field name="view_mode">tree,form</field>
+        <field name="search_view_id" ref="view_loan_request_search_form"/>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                Click to create a new Loan request.
+            </p>
+            <p>
                 Use this menu to create loan requests.
             </p>
         </field>
     </record>
 
-    <menuitem name="Request for Loan"
-        parent="menu_hr_loans_and_advances"
-        id="menu_hr_loan_request"
-        action="action_hr_loan_request"/>
+    <!--    <menuitem name="Request for Loan"-->
+    <!--              parent="menu_hr_loans_and_advances"-->
+    <!--              id="menu_hr_loan_request"-->
+    <!--              action="action_hr_loan_request"-->
+    <!--    />-->
+    <menuitem id="menu_hr_loan_my_request"
+              name="My request"
+              parent="menu_hr_loans_and_advances"
+              action="action_hr_loan_my_request"
+              sequence="10"
+              groups="ohrms_loan.group_loan_submit,hr.group_hr_user"
+    />
+    <menuitem id="menu_hr_loan_to_approve"
+              name="To request"
+              parent="menu_hr_loans_and_advances"
+              action="action_hr_loan_to_approve_request"
+              sequence="20"
+              groups="ohrms_loan.group_loan_approbation_1,ohrms_loan.group_loan_approbation_2"
+    />
+    <menuitem id="menu_hr_loan_approved"
+              name="Approved request"
+              parent="menu_hr_loans_and_advances"
+              action="action_hr_loan_approved_request"
+              sequence="30"
+              groups="ohrms_loan.group_loan_approbation_2,hr.group_hr_user"
+    />
+    <menuitem id="menu_hr_loan_all_request"
+              name="All requests"
+              parent="menu_hr_loans_and_advances"
+              action="action_hr_loan_all_request"
+              sequence="40"
+              groups="ohrms_loan.group_loan_approbation_2,hr.group_hr_user"
+    />
 
     <!-- Shortcuts -->
     <record id="act_hr_employee_loan_request" model="ir.actions.act_window">
@@ -152,10 +264,10 @@
         <field name="arch" type="xml">
             <xpath expr="//div[@name='button_box']" position="inside">
                 <button name="%(act_hr_employee_loan_request)d"
-                    type="action"
-                    class="oe_stat_button"
-                    icon="fa-calendar"
-                    groups="hr.group_hr_manager,hr.group_hr_user">
+                        type="action"
+                        class="oe_stat_button"
+                        icon="fa-calendar"
+                        groups="hr.group_hr_manager,hr.group_hr_user">
                     <field name="loan_count" widget="statinfo" string="Loans"/>
                 </button>
             </xpath>
