--- a/ohrms_loan/views/hr_loan.xml
+++ b/ohrms_loan/views/hr_loan.xml
@@ -101,10 +101,17 @@
                             </group>
                             <div class="oe_clear"/>
                         </page>
+                        <page string="Refusal Details" attrs="{'invisible':[('state','!=','refuse')]}">
+                            <group>
+                                <field name="refuse_reason" readonly="1"/>
+                                <field name="date_refuse" readonly="1"/>
+                            </group>
+                        </page>
                     </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" widget="mail_followers"/>
+                    <field name="activity_ids" widget="mail_activity"/>
                     <field name="message_ids" widget="mail_thread"/>
                 </div>
             </form>
