--- a/hakbani_sale_forecast_report/wizard/sale_forecasting_wizard.xml
+++ b/hakbani_sale_forecast_report/wizard/sale_forecasting_wizard.xml
@@ -13,6 +13,7 @@
                             <field name="file" filename="name" invisible="1"  readonly="1" />
                         </group>
                         <group>
+                            <field name="product_ids" widget="many2many_tags"/>
                         </group>
                     </group>
                     <footer>
