--- a/hakbani_invoice_report/reports/invoice_report.xml
+++ b/hakbani_invoice_report/reports/invoice_report.xml
@@ -9,7 +9,11 @@
                     </div>
                 </div>
             </div>
-            <div class="article" t-att-data-oe-model="o and o._name" t-att-data-oe-id="o and o.id" t-att-data-oe-lang="o and o.env.context.get('lang')">
+            <div t-attf-class="article"
+                 t-attf-style="background-image: url({{ 'data:image/png;base64,%s' % company.layout_background_image.decode('utf-8')}}); background-size:240mm 222mm; width:240mm; height:222mm;"
+                 t-att-data-oe-model="o and o._name"
+                 t-att-data-oe-id="o and o.id"
+                 t-att-data-oe-lang="o and o.env.context.get('lang')">
                 <t t-raw="0"/>
             </div>
             <div class="footer">
@@ -47,9 +51,9 @@
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="o">
                     <t t-call="hakbani_invoice_report.invoice_layout">
-                        <div class="page watermark" t-attf-style="background-image: url({{ 'data:image/png;base64,%s' % company.layout_background_image.decode('utf-8')}}); background-size:240mm 222mm; width:240mm; height:222mm;">
+                        <div class="page">
 <!--                            <div class="watermark"-->
-<!--                                 t-attf-style="background-image: url({{ 'data:image/png;base64,%s' % company.layout_background_image.decode('utf-8')}}); background-size:195mm 222mm; width:195mm; height:222mm;">-->
+<!--                                 t-attf-style="background-image: url({{ 'data:image/png;base64,%s' % company.layout_background_image.decode('utf-8')}}); background-size:240mm 222mm; width:240mm; height:222mm;">-->
                                 <style type="text/css">
                                     @font-face {
                                     font-family: 'Myriad-Regular';
