--- a/access_qty_onhand/views/product_views.xml
+++ b/access_qty_onhand/views/product_views.xml
@@ -31,7 +31,10 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="stock.product_template_kanban_stock_view"/>
         <field name="arch" type="xml">
-            <div t-if="record.type.raw_value == 'product'" position="attributes">
+<!--            <div t-if="record.type.raw_value == 'product'" position="attributes">-->
+<!--                <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>-->
+<!--            </div>-->
+            <div t-if="record.show_on_hand_qty_status_button.raw_value" position="attributes">
                 <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>
             </div>
         </field>
