--- a/access_qty_onhand/views/product_views.xml
+++ b/access_qty_onhand/views/product_views.xml
@@ -9,6 +9,22 @@
             <field name="qty_available" position="attributes">
                 <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>
             </field>
+            <field name="virtual_available" position="attributes">
+                <attribute name="groups">access_qty_onhand.group_access_forecast_qty</attribute>
+            </field>
+        </field>
+    </record>
+    <record id="view_stock_product_tree_inherit" model="ir.ui.view">
+        <field name="name">stock.view_stock_product_tree_inherit</field>
+        <field name="model">product.product</field>
+        <field name="inherit_id" ref="stock.view_stock_product_tree"/>
+        <field name="arch" type="xml">
+            <field name="qty_available" position="attributes">
+                <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>
+            </field>
+            <field name="virtual_available" position="attributes">
+                <attribute name="groups">access_qty_onhand.group_access_forecast_qty</attribute>
+            </field>
         </field>
     </record>
     <record id="product_template_update_quantity" model="ir.ui.view">
@@ -21,6 +37,9 @@
             </xpath>
             <xpath expr="//button[@name='action_open_quants']" position="attributes">
                 <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_product_tmpl_forecast_report']" position="attributes">
+                <attribute name="groups">access_qty_onhand.group_access_forecast_qty</attribute>
             </xpath>
         </field>
     </record>
