--- a/access_qty_onhand/views/product_views.xml
+++ b/access_qty_onhand/views/product_views.xml
@@ -44,19 +44,47 @@
         </field>
     </record>
 
+    <record id="product_product_update_quantity" model="ir.ui.view">
+        <field name="name">product.product.form</field>
+        <field name="model">product.product</field>
+        <field name="inherit_id" ref="product.product_normal_form_view"/>
+        <field name="arch" type="xml">
+            <xpath expr="//button[@name='action_update_quantity_on_hand']" position="attributes">
+                <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_open_quants']" position="attributes">
+                <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_product_forecast_report']" position="attributes">
+                <attribute name="groups">access_qty_onhand.group_access_forecast_qty</attribute>
+            </xpath>
+        </field>
+    </record>
+
 
     <record id="stock_product_template_kanban_view_inherit" model="ir.ui.view">
         <field name="name">stock_product_template_kanban_view_inherit</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="stock.product_template_kanban_stock_view"/>
+        <field name="inherit_id" ref="product.product_template_kanban_view"/>
         <field name="arch" type="xml">
-<!--            <div t-if="record.type.raw_value == 'product'" position="attributes">-->
-<!--                <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>-->
-<!--            </div>-->
-            <div t-if="record.show_on_hand_qty_status_button.raw_value" position="attributes">
+<!--            This code for my local-->
+            <div t-if="record.type.raw_value == 'product'" position="attributes">
                 <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>
             </div>
+<!--&lt;!&ndash;            This code for odoo.sh&ndash;&gt;-->
+<!--            <div t-if="record.show_on_hand_qty_status_button.raw_value" position="attributes">-->
+<!--                <attribute name="groups">access_qty_onhand.group_access_on_hand_qty</attribute>-->
+<!--            </div>-->
         </field>
+    </record>
+
+
+    <record model="ir.ui.menu" id="stock.menu_action_inventory_tree">
+        <field name="groups_id" eval="[(6,0,[ref('access_qty_onhand.group_access_inventory_adjustment')])]"/>
+    </record>
+
+    <record model="ir.ui.menu" id="stock.menu_stock_scrap">
+        <field name="groups_id" eval="[(6,0,[ref('access_qty_onhand.group_access_inventory_adjustment')])]"/>
     </record>
 
 
